--- a/testlib/Cargo.toml
+++ b/testlib/Cargo.toml
@@ -4,17 +4,8 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-borsh = "0.9.1"
-lido = { path = "../lido" }
-anchor_integration = { path = "../anchor" }
-num-derive = "0.3"
-num-traits = "0.2"
-rand = "0.7.3"
-serde = "1.0.121"
-serde_derive = "1.0.103"
+foo = { path = "../foo" }
+bar = { path = "../bar" }
 solana-program = "1.7.8"
 solana-program-test = "1.7.8"
 solana-sdk = "1.7.8"
-solana-vote-program = "1.7.8"
-spl-memo = "3.0.1"
-spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
